// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`wp-post mutation macros builds cache priming statements with failure guard: cache-priming 1`] = `
[
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel resource.wpPost.mutation cache-priming",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel mutation:cache prime",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel cache:wp-post prime",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {},
    "expr": {
      "attributes": {},
      "expr": {
        "args": [
          {
            "attributes": {},
            "byRef": false,
            "name": null,
            "nodeType": "Arg",
            "unpack": false,
            "value": {
              "attributes": {},
              "name": "post_id",
              "nodeType": "Expr_Variable",
            },
          },
        ],
        "attributes": {},
        "name": {
          "attributes": {},
          "nodeType": "Name",
          "parts": [
            "get_post",
          ],
        },
        "nodeType": "Expr_FuncCall",
      },
      "nodeType": "Expr_Assign",
      "var": {
        "attributes": {},
        "name": "post",
        "nodeType": "Expr_Variable",
      },
    },
    "nodeType": "Stmt_Expression",
  },
  {
    "attributes": {},
    "cond": {
      "attributes": {},
      "expr": {
        "attributes": {},
        "class": {
          "attributes": {},
          "nodeType": "Name",
          "parts": [
            "WP_Post",
          ],
        },
        "expr": {
          "attributes": {},
          "name": "post",
          "nodeType": "Expr_Variable",
        },
        "nodeType": "Expr_Instanceof",
      },
      "nodeType": "Expr_BooleanNot",
    },
    "else": null,
    "elseifs": [],
    "nodeType": "Stmt_If",
    "stmts": [
      {
        "attributes": {},
        "expr": {
          "args": [
            {
              "attributes": {},
              "byRef": false,
              "name": null,
              "nodeType": "Arg",
              "unpack": false,
              "value": {
                "attributes": {},
                "nodeType": "Scalar_String",
                "value": "kernel_book_failed",
              },
            },
            {
              "attributes": {},
              "byRef": false,
              "name": null,
              "nodeType": "Arg",
              "unpack": false,
              "value": {
                "attributes": {},
                "nodeType": "Scalar_String",
                "value": "Unable to load Book.",
              },
            },
            {
              "attributes": {},
              "byRef": false,
              "name": null,
              "nodeType": "Arg",
              "unpack": false,
              "value": {
                "attributes": {},
                "items": [
                  {
                    "attributes": {},
                    "byRef": false,
                    "key": {
                      "attributes": {},
                      "nodeType": "Scalar_String",
                      "value": "status",
                    },
                    "nodeType": "ArrayItem",
                    "unpack": false,
                    "value": {
                      "attributes": {},
                      "nodeType": "Scalar_Int",
                      "value": 500,
                    },
                  },
                ],
                "nodeType": "Expr_Array",
              },
            },
          ],
          "attributes": {},
          "class": {
            "attributes": {},
            "nodeType": "Name",
            "parts": [
              "WP_Error",
            ],
          },
          "nodeType": "Expr_New",
        },
        "nodeType": "Stmt_Return",
      },
    ],
  },
  {
    "attributes": {},
    "expr": {
      "args": [
        {
          "attributes": {},
          "byRef": false,
          "name": null,
          "nodeType": "Arg",
          "unpack": false,
          "value": {
            "attributes": {},
            "name": "post",
            "nodeType": "Expr_Variable",
          },
        },
        {
          "attributes": {},
          "byRef": false,
          "name": null,
          "nodeType": "Arg",
          "unpack": false,
          "value": {
            "attributes": {},
            "name": "request",
            "nodeType": "Expr_Variable",
          },
        },
      ],
      "attributes": {},
      "name": {
        "attributes": {},
        "name": "prepareBookResponse",
        "nodeType": "Identifier",
      },
      "nodeType": "Expr_MethodCall",
      "var": {
        "attributes": {},
        "name": "this",
        "nodeType": "Expr_Variable",
      },
    },
    "nodeType": "Stmt_Return",
  },
]
`;

exports[`wp-post mutation macros builds guarded status validation when requested: status-validation-guarded 1`] = `
[
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel resource.wpPost.mutation status-validation",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel mutation:status normalise",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {},
    "expr": {
      "attributes": {},
      "expr": {
        "args": [
          {
            "attributes": {},
            "byRef": false,
            "name": null,
            "nodeType": "Arg",
            "unpack": false,
            "value": {
              "attributes": {},
              "nodeType": "Scalar_String",
              "value": "status",
            },
          },
        ],
        "attributes": {},
        "name": {
          "attributes": {},
          "name": "get_param",
          "nodeType": "Identifier",
        },
        "nodeType": "Expr_MethodCall",
        "var": {
          "attributes": {},
          "name": "request",
          "nodeType": "Expr_Variable",
        },
      },
      "nodeType": "Expr_Assign",
      "var": {
        "attributes": {},
        "name": "status",
        "nodeType": "Expr_Variable",
      },
    },
    "nodeType": "Stmt_Expression",
  },
  {
    "attributes": {},
    "cond": {
      "attributes": {},
      "left": {
        "attributes": {},
        "name": {
          "attributes": {},
          "nodeType": "Name",
          "parts": [
            "null",
          ],
        },
        "nodeType": "Expr_ConstFetch",
      },
      "nodeType": "Expr_BinaryOp_NotIdentical",
      "right": {
        "attributes": {},
        "name": "status",
        "nodeType": "Expr_Variable",
      },
    },
    "else": null,
    "elseifs": [],
    "nodeType": "Stmt_If",
    "stmts": [
      {
        "attributes": {},
        "expr": {
          "attributes": {},
          "expr": {
            "args": [
              {
                "attributes": {},
                "byRef": false,
                "name": null,
                "nodeType": "Arg",
                "unpack": false,
                "value": {
                  "attributes": {},
                  "name": "status",
                  "nodeType": "Expr_Variable",
                },
              },
            ],
            "attributes": {},
            "name": {
              "attributes": {},
              "name": "normaliseBookStatus",
              "nodeType": "Identifier",
            },
            "nodeType": "Expr_MethodCall",
            "var": {
              "attributes": {},
              "name": "this",
              "nodeType": "Expr_Variable",
            },
          },
          "nodeType": "Expr_Assign",
          "var": {
            "attributes": {},
            "dim": {
              "attributes": {},
              "nodeType": "Scalar_String",
              "value": "status",
            },
            "nodeType": "Expr_ArrayDimFetch",
            "var": {
              "attributes": {},
              "name": "post_data",
              "nodeType": "Expr_Variable",
            },
          },
        },
        "nodeType": "Stmt_Expression",
      },
    ],
  },
]
`;

exports[`wp-post mutation macros builds status validation statements with metadata comments: status-validation 1`] = `
[
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel resource.wpPost.mutation status-validation",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel mutation:status normalise",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {},
    "expr": {
      "attributes": {},
      "expr": {
        "args": [
          {
            "attributes": {},
            "byRef": false,
            "name": null,
            "nodeType": "Arg",
            "unpack": false,
            "value": {
              "attributes": {},
              "nodeType": "Scalar_String",
              "value": "status",
            },
          },
        ],
        "attributes": {},
        "name": {
          "attributes": {},
          "name": "get_param",
          "nodeType": "Identifier",
        },
        "nodeType": "Expr_MethodCall",
        "var": {
          "attributes": {},
          "name": "request",
          "nodeType": "Expr_Variable",
        },
      },
      "nodeType": "Expr_Assign",
      "var": {
        "attributes": {},
        "name": "status",
        "nodeType": "Expr_Variable",
      },
    },
    "nodeType": "Stmt_Expression",
  },
  {
    "attributes": {},
    "expr": {
      "attributes": {},
      "expr": {
        "args": [
          {
            "attributes": {},
            "byRef": false,
            "name": null,
            "nodeType": "Arg",
            "unpack": false,
            "value": {
              "attributes": {},
              "name": "status",
              "nodeType": "Expr_Variable",
            },
          },
        ],
        "attributes": {},
        "name": {
          "attributes": {},
          "name": "normaliseBookStatus",
          "nodeType": "Identifier",
        },
        "nodeType": "Expr_MethodCall",
        "var": {
          "attributes": {},
          "name": "this",
          "nodeType": "Expr_Variable",
        },
      },
      "nodeType": "Expr_Assign",
      "var": {
        "attributes": {},
        "dim": {
          "attributes": {},
          "nodeType": "Scalar_String",
          "value": "status",
        },
        "nodeType": "Expr_ArrayDimFetch",
        "var": {
          "attributes": {},
          "name": "post_data",
          "nodeType": "Expr_Variable",
        },
      },
    },
    "nodeType": "Stmt_Expression",
  },
]
`;

exports[`wp-post mutation macros builds sync meta statements with metadata annotations: sync-meta 1`] = `
[
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel resource.wpPost.mutation sync-meta",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel mutation:meta update",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {},
    "expr": {
      "args": [
        {
          "attributes": {},
          "byRef": false,
          "name": null,
          "nodeType": "Arg",
          "unpack": false,
          "value": {
            "attributes": {},
            "name": "post_id",
            "nodeType": "Expr_Variable",
          },
        },
        {
          "attributes": {},
          "byRef": false,
          "name": null,
          "nodeType": "Arg",
          "unpack": false,
          "value": {
            "attributes": {},
            "name": "request",
            "nodeType": "Expr_Variable",
          },
        },
      ],
      "attributes": {},
      "name": {
        "attributes": {},
        "name": "syncBookMeta",
        "nodeType": "Identifier",
      },
      "nodeType": "Expr_MethodCall",
      "var": {
        "attributes": {},
        "name": "this",
        "nodeType": "Expr_Variable",
      },
    },
    "nodeType": "Stmt_Expression",
  },
]
`;

exports[`wp-post mutation macros builds sync taxonomies statements with result guard: sync-taxonomies 1`] = `
[
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel resource.wpPost.mutation sync-taxonomies",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment",
          "text": "// @wp-kernel mutation:taxonomies update",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {},
    "expr": {
      "attributes": {},
      "expr": {
        "args": [
          {
            "attributes": {},
            "byRef": false,
            "name": null,
            "nodeType": "Arg",
            "unpack": false,
            "value": {
              "attributes": {},
              "name": {
                "attributes": {},
                "name": "ID",
                "nodeType": "Identifier",
              },
              "nodeType": "Expr_PropertyFetch",
              "var": {
                "attributes": {},
                "name": "post",
                "nodeType": "Expr_Variable",
              },
            },
          },
          {
            "attributes": {},
            "byRef": false,
            "name": null,
            "nodeType": "Arg",
            "unpack": false,
            "value": {
              "attributes": {},
              "name": "request",
              "nodeType": "Expr_Variable",
            },
          },
        ],
        "attributes": {},
        "name": {
          "attributes": {},
          "name": "syncBookTaxonomies",
          "nodeType": "Identifier",
        },
        "nodeType": "Expr_MethodCall",
        "var": {
          "attributes": {},
          "name": "this",
          "nodeType": "Expr_Variable",
        },
      },
      "nodeType": "Expr_Assign",
      "var": {
        "attributes": {},
        "name": "result",
        "nodeType": "Expr_Variable",
      },
    },
    "nodeType": "Stmt_Expression",
  },
  {
    "attributes": {},
    "cond": {
      "args": [
        {
          "attributes": {},
          "byRef": false,
          "name": null,
          "nodeType": "Arg",
          "unpack": false,
          "value": {
            "attributes": {},
            "name": "result",
            "nodeType": "Expr_Variable",
          },
        },
      ],
      "attributes": {},
      "name": {
        "attributes": {},
        "nodeType": "Name",
        "parts": [
          "is_wp_error",
        ],
      },
      "nodeType": "Expr_FuncCall",
    },
    "else": null,
    "elseifs": [],
    "nodeType": "Stmt_If",
    "stmts": [
      {
        "attributes": {},
        "expr": {
          "attributes": {},
          "name": "result",
          "nodeType": "Expr_Variable",
        },
        "nodeType": "Stmt_Return",
      },
    ],
  },
]
`;
